--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "threejs-basics",
-  "version": "1.0.0",
-  "description": "Three.js simple example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clear": "rm -rf dist/*",
+    "build": "webpack --config ./bundler/webpack.prod.js",
+    "dev": "webpack serve --config ./bundler/webpack.dev.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/addTvb/threejs-basic-example.git"
-  },
-  "author": "Abayev Arslan",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/addTvb/threejs-basic-example/issues"
-  },
-  "homepage": "https://github.com/addTvb/threejs-basic-example#readme"
+  "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^5.0.0-alpha.7",
+    "mini-css-extract-plugin": "^1.3.4",
+    "portfinder-sync": "0.0.2",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0",
+    "three": "^0.134.0",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  }
 }
